Add theme description and anonymous members

--- a/content/radars/2021-01-secrets-management.yml
+++ b/content/radars/2021-01-secrets-management.yml
@@ -2,24 +2,37 @@ name: Secret Management
 themes:
   - headline: Vault has the broadest adoption across many companies and industries.
     content: |
-      TBW
+      Much of the Radar team was initially surprised to see such widespread adoption of HashiCorp Vault among the companies that responded. Vault has often been considered in the industry as a rather complex tool with high operational burden. However, the broad adoption makes sense when you consider many smaller organizations likely would prefer to outsource their secrets management rather than creating and maintaining an in-house solution. This is backed up by our conclusion that commercial tools have a higher adoption rate since they remove the complexity of creating an in-house tool.
+
+      Another reason Vault may have had a stronger showing is because it addresses secrets management in a cloud-agnostic way. If an organization has a decent amount of information to protect and is not already locked into a cloud provider, Vault provides a comprehensive solution whose complexity is matched by a robust feature set. It also appears to be a convenient solution for multi-cloud environments.
   - headline: After Vault, groups tend to use the native solutions provided by their public cloud provider.
     content: |
-      TBW
+      Offerings from cloud providers were also widely adopted among participating companies. This finding was not surprising since it is much easier for an organization to use a service if that same provider is already managing the infrastructure.
+
+      Each of the big cloud providers has an offering in the secrets management space. The solutions reflected in this Radar include AWS Secrets Manager, AWS Key Management Service, AWS Certificate Manager, Azure Key Vault, GCP Secrets Management. These tools offer organizations tight integration loops with features. For example, secret rotation can be used to automatically change encryption keys on a regular basis.
+
+      The question organizations should consider during cloud migration is whether or not these tools lead to vendor lock-in. On one hand, using the tools from your cloud provider makes sense since it makes it easier to integrate and automate security tools, but organizations also need to plan for future scale as many cloud tools have seat limits. According to the Radar, infrastructure scale and amount of customers are big factors influencing companies when selecting a secrets management solution.
   - headline: Certificate manager has become a popular choice in the Kubernetes ecosystem.
     content: |
-      TBW
+      We found that there is a lot of fragmentation and specialization in general among the tools included in the Radar, but this was especially the case with Kubernetes and with certificates appearing in tools and services from vendors.
+
+      One tool that saw high adoption among organizations using Kubernetes was Certificate Manager. Certificate Manager is a relatively new solution, so it was somewhat surprising to see it come up as often as it did. It is not a general purpose solution, but rather a specific tool for secrets management but it offers tight integration with the rest of the Kubernetes ecosystem. This could lead us to believe that secrets management is top of mind enough for Kubernetes users to make Certificate Manager a widespread solution.
   - headline: Other solutions in the space are fragmented across various levels of maturity and complexity.
     content: |
-      TBW
+      Behind Vault, cloud vendor solutions, and Certificate Manager, we saw a lot of fragmentation in responses which included tools designed for more specific use cases like frameworks, encrypted files in git repositories, and other overlapping tools in the Kubernetes ecosystem. Some of these were not included in the original list of tooling but did appear as one-off instances in responses. However, they did not receive enough adoption/trial/asses votes to be included on the Radar.
+
+      Something we didn’t think about initially, for example, was people using encrypted data bags with DevOps tools like Ansible, Chef or Puppet. While these did come up in some responses, many likely don’t think of them as secrets management tools but rather part of another product that helps with secrets.
+
+      One result we were surprised by was the low adoption for SPIRE, a CNCF incubating project. The project is popular among the CNCF community. It has been a prominent theme during past KubeCon + CloudNativeCon events and moved to incubation from the CNCF sandbox.
+
+      We believe this is most likely because the project is still in its earlier stages and has not yet reached feature stability. With newer tools like this, time budgeting is necessary to explore the capabilities, which can cause it to get caught in the backlog. Another potential reason is that SPIRE focuses more on identity provisioning which expands its scope and means it acts more like a framework.
 video: https://www.youtube.com/embed/Ypq9P-9WBQI
 team:
-  - name: James Nugent
-    photo: https://jen20.dev/images/profile.png
+  - name: Anonymous
+    photo: https://www.nacdnet.org/wp-content/uploads/2016/06/person-placeholder.jpg
     bio: |
-      James is an engineer on the Hybrid Cloud team at Apple, building platforms and tooling to ease adoption of first- and third-party cloud by teams across the company.
-    title: Hybrid Cloud Engineer at Apple
-    linkedin: jen20
+      -
+    title: N/A
   - name: Steve Nolen
     photo: https://rstudio.com/about/team/stevenolen/stevenolen.jpg
     bio: |
@@ -32,12 +45,11 @@ team:
       Engineering and co-founder at AuthKeys. Used to be an embedded engineer for more than a decade AuthKeys was my opportunity to turn into cloud native aware technologies. Going up and down the stack there, my main interests fall into revision control, CI/CD and anything in tech that helps managing complexity yet allowing things to scale at need.
     title: Engineer and co-founder at AuthKeys
     twitter: gizero76
-  - name: Tyler Gass
-    photo: https://5adywyhlzfg7-wtylergass-com.s3.amazonaws.com/profile.png
+  - name: Anonymous
+    photo: https://www.nacdnet.org/wp-content/uploads/2016/06/person-placeholder.jpg
     bio: |
-      Tyler is the Director of SRE at Peloton where he currently leads teams focused on kubernetes, developer tooling, security, and reliability. His mission is to provide a scalable and resilient platform for Peloton's engineers to power a worldclass member experience.
-    title: Director of SRE at Peloton
-    linkedin: wgass
+      -
+    title: N/A
 draft: true
 points:
   - name: Hashicorp Vault
