change sequenece of members

--- a/content/radars/2021-01-secrets-management.yml
+++ b/content/radars/2021-01-secrets-management.yml
@@ -28,11 +28,6 @@ themes:
       We believe this is most likely because the project is still in its earlier stages and has not yet reached feature stability. With newer tools like this, time budgeting is necessary to explore the capabilities, which can cause it to get caught in the backlog. Another potential reason is that SPIRE focuses more on identity provisioning which expands its scope and means it acts more like a framework.
 video: https://www.youtube.com/embed/Ypq9P-9WBQI
 team:
-  - name: Anonymous
-    photo: https://www.nacdnet.org/wp-content/uploads/2016/06/person-placeholder.jpg
-    bio: |
-      -
-    title: N/A
   - name: Steve Nolen
     photo: https://rstudio.com/about/team/stevenolen/stevenolen.jpg
     bio: |
@@ -49,7 +44,12 @@ team:
     photo: https://www.nacdnet.org/wp-content/uploads/2016/06/person-placeholder.jpg
     bio: |
       -
-    title: N/A
+    title: -
+  - name: Anonymous
+    photo: https://www.nacdnet.org/wp-content/uploads/2016/06/person-placeholder.jpg
+    bio: |
+      -
+    title: -
 draft: true
 points:
   - name: Hashicorp Vault
