--- a/content/radars/2021-01-secrets-management.yml
+++ b/content/radars/2021-01-secrets-management.yml
@@ -44,12 +44,14 @@ team:
     photo: https://www.nacdnet.org/wp-content/uploads/2016/06/person-placeholder.jpg
     bio: |
       -
-    title: -
+    title: |
+      -
   - name: Anonymous
     photo: https://www.nacdnet.org/wp-content/uploads/2016/06/person-placeholder.jpg
     bio: |
       -
-    title: -
+    title: |
+      -
 draft: true
 points:
   - name: Hashicorp Vault
