--- a/content/radars/2021-01-secrets-management.yml
+++ b/content/radars/2021-01-secrets-management.yml
@@ -26,7 +26,7 @@ themes:
       One result we were surprised by was the low adoption for SPIRE, a CNCF incubating project. The project is popular among the CNCF community. It has been a prominent theme during past KubeCon + CloudNativeCon events and moved to incubation from the CNCF sandbox.
 
       We believe this is most likely because the project is still in its earlier stages and has not yet reached feature stability. With newer tools like this, time budgeting is necessary to explore the capabilities, which can cause it to get caught in the backlog. Another potential reason is that SPIRE focuses more on identity provisioning which expands its scope and means it acts more like a framework.
-video: https://www.youtube.com/embed/Ypq9P-9WBQI
+video: https://zoom.us/rec/play/yaAUmUKers7LZFXEselrPDIPAl7a-ncM0vVILb1gvdVZFuw1LpE_N3YXIbnQiqwzCMRc7m_o-qeKB-Ux.mYwj-9lqnBfZ3MtQ?startTime=1613145088000
 team:
   - name: Steve Nolen
     photo: https://rstudio.com/about/team/stevenolen/stevenolen.jpg
