Add Cert-manager link

--- a/content/radars/2021-01-secrets-management.yml
+++ b/content/radars/2021-01-secrets-management.yml
@@ -62,7 +62,7 @@ points:
       assess: 2
   - name: Certificate Manager
     level: adopt
-    homepage: https://cert-manager.io/docs/
+    homepage: https://www.jetstack.io/open-source/
     votes:
       adopt: 9
       trial: 1
