Update cert-manager name

--- a/content/radars/2021-02-secrets-management.yml
+++ b/content/radars/2021-02-secrets-management.yml
@@ -60,7 +60,7 @@ points:
       adopt: 17
       trial: 2
       assess: 2
-  - name: Certificate Manager
+  - name: cert-manager
     level: adopt
     homepage: https://www.jetstack.io/open-source/
     votes:
