--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "radar",
   "version": "0.1.0",
   "scripts": {
-    "dev": "babel-node scripts/clearCache.js && next dev",
-    "build": "next build && next export && babel-node scripts/exportImages.js",
+    "dev": "babel-node scripts/clearCache.js && babel-node scripts/server.js",
+    "build": "yarn prepare-radars && next build && next export && babel-node scripts/exportImages.js",
     "start": "next start",
-    "prod": "static out -p 3000 -a 0.0.0.0"
+    "prod": "static out -p 3000 -a 0.0.0.0",
+    "prepare-radars": "babel-node scripts/prepareRadars.js"
   },
   "dependencies": {
     "@babel/core": "^7.10.4",
@@ -17,6 +18,7 @@
     "chartist": "^0.11.4",
     "image-size": "^0.8.3",
     "next": "^10.0.3",
+    "node-fetch": "^2.6.1",
     "node-static": "^0.7.11",
     "puppeteer": "^5.2.1",
     "react": "16.13.1",
