--- a/.github/workflows/cache-images.yml
+++ b/.github/workflows/cache-images.yml
@@ -13,5 +13,5 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add .
-          git commit -m "Cache images"
+          git commit -m "Cache images" || true
           git push
