--- a/content/radars/2021-06-multi-cluster-management.yml
+++ b/content/radars/2021-06-multi-cluster-management.yml
@@ -15,23 +15,99 @@ team:
   - name: Anonymous
     photo: https://www.nacdnet.org/wp-content/uploads/2016/06/person-placeholder.jpg
 subradars:
-  - name: Deployment
+  - name: Cluster Deployment
     points:
-      - name: Kubernetes
-        level: adopt
-        github: kubernetes/kubernetes
+      - name: kOps
+        level: assess
+        homepage: https://kops.sigs.k8s.io/
         votes:
-          adopt: 3
-          trial: 2
+          hold: 6
+          adopt: 4
           assess: 1
-  - name: Services
+      - name: Cluster API
+        level: assess
+        homepage: https://cluster-api.sigs.k8s.io/
+        votes:
+          assess: 9
+          adopt: 3
+          trial: 1
+      - name: HashiCorp Terraform
+        level: adopt
+        homepage: https://www.terraform.io/
+        votes:
+          adopt: 14
+          trial: 3
+          hold: 3
+          assess: 1
+      - name: Public cloud managed k8s
+        level: adopt
+        votes:
+          adopt: 19
+          assess: 2
+          trial: 2
+      - name: Private cloud managed k8s
+        level: adopt
+        votes:
+          adopt: 6
+          trial: 1
+          hold: 1
+      - name: Custom inhouse tools
+        level: adopt
+        votes:
+          adopt: 18
+          hold: 2
+          trial: 1
+  - name: Core Services and Add-ons
     points:
       - name: Helm
-        level: assess
-        github: helm/helm
+        level: adopt
+        homepage: https://helm.sh/
         votes:
-          adopt: 1
+          adopt: 18
+          hold: 2
+          trial: 1
+          assess: 1
+      - name: Kustomize
+        level: adopt
+        homepage: https://kustomize.io/
+        votes:
+          adopt: 8
+          hold: 2
+          trial: 1
+      - name: Jsonnet
+        level: trial
+        homepage: https://jsonnet.org/
+        votes:
+          adopt: 4
+          assess: 2
           trial: 2
-          assess: 3
+          hold: 1
+      - name: Operators
+        level: adopt
+        homepage: https://kubernetes.io/docs/concepts/extend-kubernetes/operator/
+        votes:
+          adopt: 24
+          assess: 2
+          trial: 1
+      - name: Flux
+        level: adopt
+        homepage: https://fluxcd.io/
+        votes:
+          adopt: 5
+          trial: 3
+          assess: 2
+      - name: Argo
+        level: adopt
+        homepage: https://argoproj.github.io/
+        votes:
+          adopt: 6
+          assess: 5
+          trial: 4
+      - name: Custom inhouse tools
+        level: adopt
+        votes:
+          adopt: 17
+          assess: 1
+          hold: 1
 companies:
   - apple-member
