--- a/content/industries.yml
+++ b/content/industries.yml
@@ -47,3 +47,8 @@ u-pchieve-member: Academia
 price-spider-supporter: E-commerce
 pro-sieben-sat-1-supporter: Broadcasting
 verizon-media-supporter: Internet
+king-supporter: N/A
+adidas-supporter: N/A
+fidelity-investments-member: N/A
+mattermost-member: N/A
+daimler-member: N/A
