--- a/content/industries.yml
+++ b/content/industries.yml
@@ -47,8 +47,8 @@ u-pchieve-member: Academia
 price-spider-supporter: E-commerce
 pro-sieben-sat-1-supporter: Broadcasting
 verizon-media-supporter: Internet
-king-supporter: N/A
-adidas-supporter: N/A
-fidelity-investments-member: N/A
-mattermost-member: N/A
-daimler-member: N/A
+king-supporter: Entertainment
+adidas-supporter: Sporting Goods
+fidelity-investments-member: Financial Services
+mattermost-member: Software
+daimler-member: Automotive
