--- a/content/industries.yml
+++ b/content/industries.yml
@@ -47,3 +47,8 @@ u-pchieve-member: Academia
 price-spider-supporter: E-commerce
 pro-sieben-sat-1-supporter: Broadcasting
 verizon-media-supporter: Internet
+king-supporter: Entertainment
+adidas-supporter: Sporting Goods
+fidelity-investments-member: Financial Services
+mattermost-member: Software
+daimler-member: Automotive
