Add video to multicluster mgmt radar

--- a/content/radars/2021-06-multicluster-management.yml
+++ b/content/radars/2021-06-multicluster-management.yml
@@ -66,6 +66,7 @@ team:
       Vice President of Cloud Platforms at Fidelity Investments, where I lead the engineering teams that work on Kubernetes-based platforms for all of Fidelity's R&D teams, focusing primarily on offerings on multiple CSPs.
     title: Vice President of Cloud Platforms at Fidelity Investments
     linkedin: niraj-amin
+video: video: https://www.youtube.com/embed/mjg_x9iYEIc
 subradars:
   - name: Cluster Deployment
     points:
