--- a/content/radars/2021-02-secrets-management.yml
+++ b/content/radars/2021-02-secrets-management.yml
@@ -99,32 +99,61 @@ points:
       assess: 1
       hold: 1
 companies:
-  - apple-member
-  - canada-health-infoway-member
-  - auth-keys-supporter
-  - zalando-supporter
-  - meltwater-supporter
-  - the-new-york-times-supporter
-  - peloton-interactive-member
-  - thermo-fisher-scientific-supporter
-  - equity-zen-supporter
-  - snow-software-supporter
-  - db-systel-supporter
-  - uswitch-supporter
-  - shopify-supporter
-  - workday-supporter
-  - gmx-supporter
-  - n26-supporter
-  - sony-interactive-entertainment-supporter
-  - box-supporter
-  - u-pchieve-member
-  - lunar-supporter
-  - price-spider-supporter
-  - pro-sieben-sat-1-supporter
-  - pay-it-supporter
-  - net-match-supporter
-  - trivago-supporter
-  - verizon-media-supporter
-  - zendesk-supporter
-  - intuit-member
-  - r-studio-supporter
+  - landscapeId: apple-member
+    industry: Consumer Electronics
+  - landscapeId: canada-health-infoway-member
+    industry: Healthcare
+  - landscapeId: auth-keys-supporter
+    industry: Software
+  - landscapeId: zalando-supporter
+    industry: E-commerce
+  - landscapeId: meltwater-supporter
+    industry: Software
+  - landscapeId: the-new-york-times-supporter
+    industry: News Media
+  - landscapeId: peloton-interactive-member
+    industry: Wellness
+  - landscapeId: thermo-fisher-scientific-supporter
+    industry: Scientific Equipment
+  - landscapeId: equity-zen-supporter
+    industry: Financial Services
+  - landscapeId: snow-software-supporter
+    industry: Software
+  - landscapeId: db-systel-supporter
+    industry: Software
+  - landscapeId: uswitch-supporter
+    industry: Consumer Website
+  - landscapeId: shopify-supporter
+    industry: E-commerce
+  - landscapeId: workday-supporter
+    industry: Software
+  - landscapeId: gmx-supporter
+    industry: Email
+  - landscapeId: n26-supporter
+    industry: Financial Services
+  - landscapeId: sony-interactive-entertainment-supporter
+    industry: Entertainment
+  - landscapeId: box-supporter
+    industry: File Sharing
+  - landscapeId: u-pchieve-member
+    industry: Academia
+  - landscapeId: lunar-supporter
+    industry: Financial Services
+  - landscapeId: price-spider-supporter
+    industry: E-commerce
+  - landscapeId: pro-sieben-sat-1-supporter
+    industry: Broadcasting
+  - landscapeId: pay-it-supporter
+    industry: Digital Platform
+  - landscapeId: net-match-supporter
+    industry: Travel
+  - landscapeId: trivago-supporter
+    industry: Travel
+  - landscapeId: verizon-media-supporter
+    industry: Internet
+  - landscapeId: zendesk-supporter
+    industry: Software
+  - landscapeId: intuit-member
+    industry: Software
+  - landscapeId: r-studio-supporter
+    industry: Software
