--- a/content/radars/2021-09-devsecops.yml
+++ b/content/radars/2021-09-devsecops.yml
@@ -45,138 +45,125 @@ points:
   - name: Artifactory 
     homepage: https://jfrog.com/artifactory/
     level: adopt
-    votes: 
+    votes:
       adopt: 14
       trial: 1
       assess: 1
   - name: Sonarqube
-  - homepage: https://www.sonarqube.org/
+    homepage: https://www.sonarqube.org/
     level: adopt
     votes:
       adopt: 13
       trial: 2
-      assess: 0
   - name: XRay
-  - homepage: https://www.getxray.app/
+    homepage: https://www.getxray.app/
     level: trial
     votes:
       adopt: 1
       trial: 3
       assess: 6
-   - name: GitHub Actions
-   - homepage: https://github.com/actions
+  - name: GitHub Actions
+    homepage: https://github.com/actions
     level: assess
     votes:
       adopt: 4
       trial: 3
       assess: 5
-   - name: Calico/Tigera
-   - homepage: https://www.tigera.io/tigera-products/calico/
+  - name: Calico/Tigera
+    homepage: https://www.tigera.io/tigera-products/calico/
     level: adopt
     votes:
       adopt: 9
-      trial: 0
       assess: 1
-   - name: OPA
-   - homepage: https://www.openpolicyagent.org/
+  - name: OPA
+    homepage: https://www.openpolicyagent.org/
     level: adopt
     votes:
       adopt: 6
       trial: 4
       assess: 2
-   - name: Hashicorp Sentinel
-   - homepage: https://www.hashicorp.com/sentinel
+  - name: Hashicorp Sentinel
+    homepage: https://www.hashicorp.com/sentinel
     level: assess
     votes:
       adopt: 1
       trial: 1
       assess: 2
-    - name: Terraform
-    - homepage: https://www.terraform.io/
+  - name: Terraform
+    homepage: https://www.terraform.io/
     level: adopt
     votes:
       adopt: 18
-      trial: 0
       assess: 1
-    - name: Hashicorp Vault
-    - homepage: https://www.vaultproject.io/
+  - name: Hashicorp Vault
+    homepage: https://www.vaultproject.io/
     level: adopt
     votes:
       adopt: 14
       trial: 3
-      assess: 0
-    - name: Istio
-    - homepage: https://istio.io/
+  - name: Istio
+    homepage: https://istio.io/
     level: adopt
     votes:
       adopt: 6
       trial: 1
       assess: 7
-    - name: Linkerd
-    - homepage: https://linkerd.io/
+  - name: Linkerd
+    homepage: https://linkerd.io/
     level: assess
     votes:
       adopt: 2
-      trial: 0
       assess: 3
-    - name: ArgoCD
-    - homepage: https://argoproj.github.io/argo-cd/
+  - name: ArgoCD
+    homepage: https://argoproj.github.io/argo-cd/
     level: adopt
     votes:
       adopt: 8
       trial: 1
       assess: 1
-    - name: Harness
-    - homepage: https://harness.io/
+  - name: Harness
+    homepage: https://harness.io/
     level: assess
     votes:
       adopt: 2
       trial: 2
       assess: 2
-    - name: Cilium
-    - homepage: https://cilium.io/
+  - name: Cilium
+    homepage: https://cilium.io/
     level: assess
     votes:
       adopt: 2
       trial: 2
       assess: 3
-   - name: Trivy
-   - homepage: https://aquasecurity.github.io/trivy/v0.17.0/
+  - name: Trivy
+    homepage: https://aquasecurity.github.io/trivy/v0.17.0/
     level: assess
     votes:
-      adopt: 0
       trial: 4
       assess: 3
-    - name: Sonatype Nexus
-    - homepage: https://www.sonatype.com/products/repository-pro
-      level: assess
+  - name: Sonatype Nexus
+    homepage: https://www.sonatype.com/products/repository-pro
+    level: assess
     votes:
       adopt: 6
       trial: 1
-      assess: 0
 companies:
-  - landscapeId: allianz-member
+  - landscapeId: allianz-direct-member
     industry: Insurance
   - landscapeId: meltwater-supporter
     industry: Software
-  - landscapeId: postfinance-supporter
+  - landscapeId: post-finance-supporter
     industry: Financial Services
   - landscapeId: discover-financial-services-supporter
     industry: Financial Services
-  - landscapeId: thrivent-member
-    industry: Financial Services
-  - landscapeId: cern-member
-    industry: Scientific Research
-  - landscapeId: upchieve-member
+  - landscapeId: u-pchieve-member
     industry: Education
   - landscapeId: zalando-supporter
     industry: E-commerce
   - landscapeId: shopify-supporter
     industry: E-commerce    
-  - landscapeId: netmatch-supporter
+  - landscapeId: net-match-supporter
     industry: E-commerce
-  - landscapeId: opentable
-    industry: Dining
   - landscapeId: box-supporter
     industry: Software
   - landscapeId: nipr-member
