--- a/content/radars/2020-06-continuous-delivery.yml
+++ b/content/radars/2020-06-continuous-delivery.yml
@@ -166,7 +166,7 @@ companies:
     industry: Software
   - landscapeId: ever-quote-supporter
     industry: Insurance
-  - landscapeId: jd-com-member
+  - landscapeId: jd-cloud-member
     industry: E-commerce
   - landscapeId: pay-it-supporter
     industry: Digital Platform
