Updated Xray spelling and homepage
Was the reference to XRay [https://github.com/cncf/radar/search?q=xray](https://github.com/cncf/radar/search?q=xray) meant to be [JFrog Xray](https://www.jfrog.com/confluence/display/JFROG/JFrog+Xray) the DevSecOps SCA toolset used with Artifactory in the Adopt range?

Signed-off-by: Jay Cuthrell <jay@cuthrell.com>

--- a/content/radars/2021-09-devsecops.yml
+++ b/content/radars/2021-09-devsecops.yml
@@ -51,8 +51,8 @@ points:
     votes:
       adopt: 13
       trial: 2
-  - name: XRay
-    homepage: https://www.getxray.app/
+  - name: Xray
+    homepage: https://www.jfrog.com/confluence/display/JFROG/JFrog+Xray
     level: trial
     votes:
       adopt: 1
